{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 33,
  "lineage": "ee84bec7-9607-5caa-a9bb-ba6e1ff1f73a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:303981612052:vpc/vpc-02052c2eb890946a4",
            "cidr_block": "10.0.0.0/27",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f8fb25cff9e9d58f",
                "cidr_block": "10.0.0.0/27",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-017262326de2595de",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02052c2eb890946a4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0303b5fcf2b258ac0",
            "owner_id": "303981612052",
            "tags": {
              "Name": "default"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:303981612052:loadbalancer/app/flask-app-tf-alb/eac5bc396eeebb8d",
            "arn_suffix": "app/flask-app-tf-alb/eac5bc396eeebb8d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "flask-app-tf-alb-1028148465.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:303981612052:loadbalancer/app/flask-app-tf-alb/eac5bc396eeebb8d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "flask-app-tf-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ec2f58c89c9b9c22"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-090482e74ffb9dd3b"
              },
              {
                "subnet_id": "subnet-09468bbf67d04ff63"
              }
            ],
            "subnets": [
              "subnet-090482e74ffb9dd3b",
              "subnet-09468bbf67d04ff63"
            ],
            "tags": {
              "Name": "flask-app-tf-alb"
            },
            "tags_all": {
              "Name": "flask-app-tf-alb"
            },
            "vpc_id": "vpc-02052c2eb890946a4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.private",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:303981612052:listener/app/flask-app-tf-alb/eac5bc396eeebb8d/ae7e0f46e68bfd1f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:303981612052:targetgroup/flask-app-tf-tg/ee96aad8dbcbc16d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:303981612052:listener/app/flask-app-tf-alb/eac5bc396eeebb8d/ae7e0f46e68bfd1f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:303981612052:loadbalancer/app/flask-app-tf-alb/eac5bc396eeebb8d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Application": "flask-app",
              "Billing": "foo_bar",
              "CreatedDate": "2025-06-30",
              "Group": "terraform-aws",
              "Managed": "terraform",
              "Name": "flask-app-tf-tg",
              "Owner": "bmeadmore",
              "Project": "travelperk",
              "Region": "eu-north-1",
              "Stage": "prod",
              "Subgroup": "ecs"
            },
            "tags_all": {
              "Application": "flask-app",
              "Billing": "foo_bar",
              "CreatedDate": "2025-06-30",
              "Group": "terraform-aws",
              "Managed": "terraform",
              "Name": "flask-app-tf-tg",
              "Owner": "bmeadmore",
              "Project": "travelperk",
              "Region": "eu-north-1",
              "Stage": "prod",
              "Subgroup": "ecs"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "data.aws_subnets.private",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:303981612052:targetgroup/flask-app-tf-tg/ee96aad8dbcbc16d",
            "arn_suffix": "targetgroup/flask-app-tf-tg/ee96aad8dbcbc16d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:303981612052:targetgroup/flask-app-tf-tg/ee96aad8dbcbc16d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:303981612052:loadbalancer/app/flask-app-tf-alb/eac5bc396eeebb8d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "flask-app-tf-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "flask-app",
              "Billing": "foo_bar",
              "CreatedDate": "2025-06-30",
              "Group": "terraform-aws",
              "Managed": "terraform",
              "Name": "flask-app-tf-tg",
              "Owner": "bmeadmore",
              "Project": "travelperk",
              "Region": "eu-north-1",
              "Stage": "prod",
              "Subgroup": "ecs"
            },
            "tags_all": {
              "Application": "flask-app",
              "Billing": "foo_bar",
              "CreatedDate": "2025-06-30",
              "Group": "terraform-aws",
              "Managed": "terraform",
              "Name": "flask-app-tf-tg",
              "Owner": "bmeadmore",
              "Project": "travelperk",
              "Region": "eu-north-1",
              "Stage": "prod",
              "Subgroup": "ecs"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02052c2eb890946a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:303981612052:security-group/sg-0ec2f58c89c9b9c22",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec2f58c89c9b9c22",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "flask-app-tf-alb-20250605144851483200000001",
            "name_prefix": "flask-app-tf-alb-",
            "owner_id": "303981612052",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "flask-app",
              "Billing": "foo_bar",
              "CreatedDate": "2025-06-30",
              "Group": "terraform-aws",
              "Managed": "terraform",
              "Name": "flask-app-tf-alb-sg",
              "Owner": "bmeadmore",
              "Project": "travelperk",
              "Region": "eu-north-1",
              "Stage": "prod",
              "Subgroup": "ecs"
            },
            "tags_all": {
              "Application": "flask-app",
              "Billing": "foo_bar",
              "CreatedDate": "2025-06-30",
              "Group": "terraform-aws",
              "Managed": "terraform",
              "Name": "flask-app-tf-alb-sg",
              "Owner": "bmeadmore",
              "Project": "travelperk",
              "Region": "eu-north-1",
              "Stage": "prod",
              "Subgroup": "ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-02052c2eb890946a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:303981612052:security-group/sg-08ce18c6d86c44a75",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ce18c6d86c44a75",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ec2f58c89c9b9c22"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "flask-app-tf-ecs-20250605144853708000000002",
            "name_prefix": "flask-app-tf-ecs-",
            "owner_id": "303981612052",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "flask-app",
              "Billing": "foo_bar",
              "CreatedDate": "2025-06-30",
              "Group": "terraform-aws",
              "Managed": "terraform",
              "Name": "flask-app-tf-ecs-sg",
              "Owner": "bmeadmore",
              "Project": "travelperk",
              "Region": "eu-north-1",
              "Stage": "prod",
              "Subgroup": "ecs"
            },
            "tags_all": {
              "Application": "flask-app",
              "Billing": "foo_bar",
              "CreatedDate": "2025-06-30",
              "Group": "terraform-aws",
              "Managed": "terraform",
              "Name": "flask-app-tf-ecs-sg",
              "Owner": "bmeadmore",
              "Project": "travelperk",
              "Region": "eu-north-1",
              "Stage": "prod",
              "Subgroup": "ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-02052c2eb890946a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}